--- a/scss/message/_message-list.scss
+++ b/scss/message/_message-list.scss
@@ -11,11 +11,17 @@
   overflow: hidden;
 
   .unread-message-counter {
+    $heightUnreadCounter: 30px;
+    $heightJumpToBottomButton: 40px;
+    $width: 40px;
+    $marginBottom: 20px;
+    $marginRight: 10px;
+
     position: relative;
-    left: calc(100% - 40px - 10px);
-    top: -(30px + 40px + 20px);
-    height: 30px + 40px;
-    width: 40px;
+    left: calc(100% - $width - $marginRight);
+    top: -( + $marginBottom);
+    height: $heightUnreadCounter + $heightJumpToBottomButton;
+    width: $width;
     .counter {
       position: relative;
       z-index: 10;
@@ -36,12 +42,12 @@
       position: relative;
       z-index: 8;
       
-      height: 40px;
+      height: $heightUnreadCounter;
       margin: 0 auto;
       margin-top: -10px;
-      width: 40px;
+      width: $width;
       
-      line-height: 40px;
+      line-height: $heightUnreadCounter;
       background-color: white;
       border-radius: 100%;
       
