--- a/scss/message/_message.scss
+++ b/scss/message/_message.scss
@@ -388,7 +388,6 @@
   padding: 0 4px;
   padding-left: 9px;
   margin: 2px 0 5px 0;
-  height: 44px;
 
   // &.has-message:hover {
   //   background: rgba(0, 0, 0, 0.07);
@@ -405,7 +404,7 @@
   .quoted-text {
     font-size: 12px;
     margin: 0;
-    height: 30px;
+    max-height: 40px;
     overflow: hidden;
     line-clamp: 3;
     display: -webkit-box;
