Fix formatting and remove unused code

--- a/scss/composer/_composer.scss
+++ b/scss/composer/_composer.scss
@@ -3,7 +3,7 @@
   border-left: 1px solid rgba(16, 22, 26, 0.1);
   &.composer--disabled-message-input {
     height: 40px;
-    padding: calc(.5rem + 3px);
+    padding: calc(0.5rem + 3px);
     overflow: hidden;
 
     text-align: center;
